@@ -2,6 +2,11 @@ django-sitemessage changelog
 ============================
 
 
+Unreleased
+----------
+* Fixed 'proxies' parameter passing.
+
+
 v1.2.0 [2020-01-21]
 -------------------
 ! Dropped Python 2 support.
